# rustscale

./: .gitignore  .secrets  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  deny.toml  opencode.json
.github/workflows/: audit.yml  bench.yml  ci.yml  coverage.yml  e2e.yml  fuzz.yml  pages.yml  privileged-tun.yml  release.yml  sanitizer.yml
.opencode/agents/: orchestrator.md
.opencode/command/: check.md  clippy-all.md  go-find.md  wait-build.md  where.md
bindings/python/: rustscale.py
compat/: README.md  tsnet-overrides.json  tsnet.md
compat/manifests/: c-abi.json  cli.json  localapi.json  python-api.json  rust-api.json  tsnet.json
compat/schema/: manifest-v1.schema.json  provenance-v1.schema.json
compat/upstream/: cli.json  localapi.json  provenance.json  tsnet.json
container/: entrypoint.sh
crates/appc/: Cargo.toml
crates/appc/src/: conn25.rs  connector.rs  lib.rs  observe.rs  ratelog.rs  routes.rs
crates/art/: Cargo.toml
crates/art/src/: lib.rs  stride_table.rs  tests.rs
crates/atomicfile/: Cargo.toml
crates/auditlog/: Cargo.toml
crates/auditlog/src/: lib.rs
crates/bakedroots/: Cargo.toml
crates/bakedroots/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench-tsrs/: Cargo.toml
crates/bench-tsrs/src/: latency.rs  main.rs  protocol.rs  server.rs  throughput.rs
crates/bench/src/: latency.rs  main.rs  protocol.rs  server.rs  throughput.rs
crates/bench/tests/: cli_exit.rs
crates/c2n/: Cargo.toml
crates/c2n/src/: lib.rs
crates/chirp/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: completion.rs  flags.rs  main.rs  qrcode.rs  socket.rs  version.rs
crates/cli/src/commands/: bugreport.rs  cert.rs  debug.rs  dns.rs  down.rs  drive.rs  exit_node.rs  file.rs  get.rs  health.rs  id_token.rs  ip.rs  lock.rs  login.rs  logout.rs  metrics.rs  mod.rs  nc.rs  netcheck.rs  ping.rs  serve.rs  set.rs  speedtest.rs  ssh.rs  status.rs  switch.rs  up.rs  update.rs  version.rs  wait.rs  web.rs  whois.rs
crates/cli/tests/: cli_integration.rs  completion_integration.rs  dns_integration.rs  drive_integration.rs  failure_process_interop.rs  help_contract.rs  nc_integration.rs  wait_integration.rs
crates/clientmetric/: Cargo.toml
crates/clientmetric/src/: lib.rs
crates/clientupdate/: Cargo.toml
crates/clientupdate/src/: archive.rs  http.rs  install.rs  lib.rs
crates/clientupdate/tests/: process_interop.rs
crates/conffile/: Cargo.toml
crates/conffile/src/: lib.rs
crates/connectproxy/: Cargo.toml
crates/connectproxy/src/: lib.rs
crates/controlclient/: Cargo.toml
crates/controlclient/src/: c2n.rs  client.rs  controlbase.rs  controlhttp.rs  lib.rs  login_flags.rs  ssh_notify.rs  tka.rs
crates/controlclient/src/client/: tests.rs
crates/controlclient/src/controlbase/: tests.rs
crates/controlknobs/: Cargo.toml
crates/deephash/: Cargo.toml
crates/deephash/src/: hash_impls.rs  hasher.rs  lib.rs  sum.rs
crates/deephash/tests/: parity.rs
crates/derp/: Cargo.toml
crates/derp/src/: client.rs  frame.rs  lib.rs  protocol.rs  server.rs
crates/disco/: Cargo.toml
crates/disco/src/: lib.rs  message.rs  wire.rs
crates/dns/: Cargo.toml
crates/dns/src/: forwarder.rs  lib.rs  osconfig.rs  osconfig_darwin.rs  osconfig_linux.rs  tests.rs  wire.rs
crates/dnscache/: Cargo.toml
crates/dnscache/src/: lib.rs
crates/dnsfallback/: Cargo.toml
crates/dnsfallback/src/: lib.rs
crates/dnsname/: Cargo.toml
crates/drive/: Cargo.toml
crates/drive/src/: auth.rs  config.rs  http.rs  lib.rs  path.rs
crates/envknob/: Cargo.toml
crates/feature/: Cargo.toml
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/src/: lib.rs  tests.rs
crates/filter/: Cargo.toml
crates/filter/src/: lib.rs  match.rs  packet.rs  parse.rs  prefix.rs  state.rs  tests.rs
crates/flowtrack/: Cargo.toml
crates/flowtrack/src/: lib.rs
crates/freedesktop/: Cargo.toml
crates/freedesktop/src/: lib.rs  systemd_user.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/identityfederation/: Cargo.toml
crates/identityfederation/src/: lib.rs  tests.rs
crates/interop-testcontrol/: Cargo.toml
crates/interop-testcontrol/src/: lib.rs  tests.rs
crates/ipn/: Cargo.toml
crates/ipn/src/: backend.rs  bus.rs  captiveportal.rs  lib.rs  machine.rs  prefs.rs  profiles.rs  store.rs
crates/ipn/tests/: persistence.rs  state_proptest.rs
docs/: agent-harness.md  bench-tsrs-spec.md  benchmarks.md  build-pipeline-research.md  gcp-interop-bugs.md  parity.md  phase-10-ssh.md  phase-10d-latency.md  phase-11-dnsfallback.md  phase-11-magicdns-certs-whois.md  phase-12-netmon.md  phase-13-peerapi.md  phase-14-c2n.md  phase-15-netmapcache.md  phase-16-hostinfo.md  phase-17-controlknobs.md  phase-agent-harness-fail-closed.md  phase-auditlog.md  phase-batched-wg-receive-handoff.md  phase-bench-cli-direct.md  phase-bench-cli-parity.md  phase-bench-dual-endpoint-profile.md  phase-bench-focused-profile.md  phase-bench-harness-focus.md  phase-bench-metadata.md  phase-bench-repeat-median.md  phase-bench-simplify.md  phase-bench-tun-handoff.md  phase-capture-pcap.md  phase-ci-parity.md  phase-cli-cert-qr.md  phase-cli-core.md  phase-cli-ping-derp-bootstrap.md  phase-cli-ping-direct-discovery.md  phase-cli-ssh-web.md  phase-direct-path-convergence.md  phase-disco-key-refresh.md  phase-dnsname-ringlog.md  phase-fix-derp-security.md  phase-fix-exitnode-logout-keylifecycle.md  (+69 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: derp_frame.rs  disco_decode.rs  portmapper_pcp.rs  portmapper_pmp.rs  stun_parse.rs
include/: rustscale.h
scripts/: install-from-source.sh  install.ps1  install.sh
site/: index.html
tools/: check.sh  ci-fail.sh  clippy-all.sh  commit.sh  e2e.sh  ffi-smoke.sh  gen-header.sh  gen-wire-fixtures.sh  go-find.sh  ignore-guard.sh  interop-tun-cleanup.sh  interop-tun-full.sh  interop-tun-oops.sh  interop-tun-preflight.sh  interop-tun.sh  interop.sh  provision-interop-vm.sh  speedtest-interop.sh  version.sh  wait-build.sh  where.sh  worktree-status.sh
(+681 files in other folders)
