[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "BSD-3-Clause"
repository = "https://github.com/rajsingh/rustscale"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
curve25519-dalek = { version = "4", features = ["zeroize"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
crypto_box = { version = "0.9", features = ["std", "alloc"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22"
data-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls = { version = "0.23", features = ["ring"] }

# Shared lint policy: pedantic where sane, but allow the noisier style lints so
# that the default `cargo clippy` run stays clean and readable.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
enum_glob_use = "allow"
doc_markdown = "allow"
