[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/bench-tsrs"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "BSD-3-Clause"
repository = "https://github.com/rajsingh/rustscale"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
curve25519-dalek = { version = "4", features = ["zeroize"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
crypto_box = { version = "0.9", features = ["std", "alloc"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22"
data-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
crc32fast = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Noise IK handshake primitives for controlbase (ts2021 control protocol).
chacha20poly1305 = "0.10"
blake2 = "0.10"

# ACME (RFC 8555) account key: ES256 (ECDSA P-256 + SHA-256) JWS signing.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "std"] }
sha2 = { version = "0.10" }

# WireGuard userspace tunnel engine (noise::Tunn API only — not the device layer).
boringtun = "0.7"

# Userspace TCP/IP stack for tsnet-style dialing/listening.
smoltcp = { version = "0.13", default-features = false, features = ["medium-ip", "proto-ipv4", "socket-tcp", "alloc"] }

# HTTP/2 client for the Noise-tunneled control plane (ts2021).
h2 = "0.4"

# Local network interface enumeration (getifaddrs) for magicsock endpoint
# gathering — exposes a safe API over platform-specific unsafe FFI.
if-addrs = "0.15"

# Raw FFI bindings for TUN device syscalls (utun on macOS, /dev/net/tun on Linux).
libc = "0.2"

# Async trait methods for the TUN device abstraction.
async-trait = "0.1"

# Self-signed certificate generation for tsnet ListenTLS (self-signed-per-node
# stage; real LE certs via control come in a later phase).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

rustscale-netmon = { path = "crates/netmon" }
socket2 = { version = "0.6", features = ["all"] }
rustscale-netns = { path = "crates/netns" }
rustscale-dnscache = { path = "crates/dnscache" }
rustscale-dnsfallback = { path = "crates/dnsfallback" }

# Shared lint policy: pedantic where sane, but allow the noisier style lints so
# that the default `cargo clippy` run stays clean and readable.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
enum_glob_use = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
similar_names = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_wraps = "allow"
zero_sized_map_values = "allow"
while_let_loop = "allow"
manual_let_else = "allow"
needless_continue = "allow"
cloned_ref_to_slice_refs = "allow"
uninlined_format_args = "allow"
empty_line_after_doc_comments = "allow"
drop_non_drop = "allow"
