[package]
name = "rustscale-appc"
description = "App Connector — DNS-domain-oriented dynamic route advertisement for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-deephash = { path = "../deephash", version = "0.1.1" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rustscale-key = { path = "../key", version = "0.1.1" }
serde_json.workspace = true
