[package]
name = "rustscale-auditlog"
description = "Persistent client audit-log queue for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-ipn = { path = "../ipn", version = "0.1.0" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.0" }
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
