[package]
name = "tsrs-bench"
description = "Throughput and latency benchmark harness for tailscale-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rajsingh/rustscale"

[dependencies]
tailscale = { git = "https://github.com/tailscale/tailscale-rs.git", tag = "v0.4.0" }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

# Standalone crate — not part of the rustscale workspace (tailscale-rs is a
# separate workspace root). Build with:
#   cargo build --manifest-path crates/bench-tsrs/Cargo.toml --release
[workspace]
