[package]
name = "rustscale-c2n"
description = "Control-to-Node (C2N) HTTP API for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
rustscale-tsaddr = { path = "../tsaddr", version = "0.1.5" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.5" }
