[package]
name = "rustscale-cli"
description = "rustscale CLI binary — talks to rustscaled over LocalAPI (Go 'tailscale' equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "rustscale"
path = "src/main.rs"

[dependencies]
rustscale-localclient = { path = "../localclient", version = "0.1.4" }
rustscale-drive = { path = "../drive", version = "0.1.4" }
rustscale-safesocket = { path = "../safesocket", version = "0.1.4" }
rustscale-ipn = { path = "../ipn", version = "0.1.4" }
rustscale-netcheck = { path = "../netcheck", version = "0.1.4" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.4" }
rustscale-key = { path = "../key", version = "0.1.4" }
rustscale-tka = { path = "../tka", version = "0.1.4" }
rustscale-tsnet = { path = "../tsnet", version = "0.1.4" }
rustscale-ipnstate = { path = "../ipnstate", version = "0.1.4" }
rustscale-speedtest = { path = "../speedtest", version = "0.1.4" }
rustscale-clientupdate = { path = "../clientupdate", version = "0.1.4" }
rustscale-freedesktop = { path = "../freedesktop", version = "0.1.4" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
qrcode = { version = "0.13", default-features = false }
base64.workspace = true
rand.workspace = true
subtle = "2"
url = "2"
flate2 = "1"
crc32fast.workspace = true
async-trait.workspace = true
hex.workspace = true
if-addrs.workspace = true

[dev-dependencies]
tempfile = "3"
rustscale-tsnet = { path = "../tsnet", version = "0.1.4" }
rustscale-testcontrol = { path = "../testcontrol", version = "0.1.4" }

[build-dependencies]
# build.rs stamps git version — no external deps needed.
