[package]
name = "rustscale-clientupdate"
description = "Client update checker for rustscale — port of Go's clientupdate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.1" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
