[package]
name = "rustscale-conffile"
description = "Declarative config file for rustscaled — Go ipn/conffile + ipn/conf.go equivalent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-ipn = { path = "../ipn", version = "0.1.5" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.5" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
