[package]
name = "rustscale-connectproxy"
description = "HTTP CONNECT proxy for rustscale — port of Go's net/connectproxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
log = "0.4"
rustscale-tsdial = { path = "../tsdial", version = "0.1.1" }
