[package]
name = "rustscale-controlclient"
description = "ts2021 Noise-based control plane client for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-key = { path = "../key", version = "0.1.0" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
rustls.workspace = true
chacha20poly1305.workspace = true
blake2.workspace = true
curve25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
h2.workspace = true
http = "1"
bytes.workspace = true
rustscale-netns.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
