[package]
name = "rustscale-controlclient"
description = "ts2021 Noise-based control plane client for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-key = { path = "../key", version = "0.1.2" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.2" }
rustscale-controlknobs = { path = "../controlknobs", version = "0.1.2" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
chacha20poly1305.workspace = true
blake2.workspace = true
curve25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
h2.workspace = true
http = "1"
bytes.workspace = true
rustscale-netns.workspace = true
rustscale-dnscache.workspace = true
rustscale-auditlog = { path = "../auditlog", version = "0.1.2" }
rustscale-dnsfallback.workspace = true
rustscale-tshttpproxy = { path = "../tshttpproxy", version = "0.1.2" }
rustscale-tlsdial = { path = "../tlsdial", version = "0.1.2" }
rustscale-tsdial = { path = "../tsdial", version = "0.1.2" }
rustscale-envknob = { path = "../envknob", version = "0.1.2" }
url = "2"
async-trait.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["test-util"] }
