[package]
name = "rustscale-deephash"
description = "Process-local structural hashing for change detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
rand.workspace = true
sha2.workspace = true
rustscale-ipn = { path = "../ipn", version = "0.1.1" }
rustscale-key = { path = "../key", version = "0.1.1" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.1" }

[dev-dependencies]
proptest = "1"
