[package]
name = "rustscale-derp"
description = "DERP relay client protocol for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-utils = ["dep:rustscale-tailcfg"]

[dependencies]
rustscale-key = { path = "../key", version = "0.1.0" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.0", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
rustls.workspace = true
hex.workspace = true
rustscale-netns.workspace = true
rustscale-tshttpproxy = { path = "../tshttpproxy", version = "0.1.0" }
rustscale-tsdial = { path = "../tsdial" }
url = "2"

[dev-dependencies]
tokio.workspace = true
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.0" }
