[package]
name = "rustscale-derp"
description = "DERP relay client protocol for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-utils = ["dep:rustscale-tailcfg"]

[dependencies]
rustscale-key = { path = "../key", version = "0.1.3" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.3", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
hex.workspace = true
rustscale-netns.workspace = true
rustscale-tshttpproxy = { path = "../tshttpproxy", version = "0.1.3" }
rustscale-tlsdial = { path = "../tlsdial", version = "0.1.3" }
rustscale-tsdial = { path = "../tsdial", version = "0.1.3" }
rustscale-envknob = { path = "../envknob", version = "0.1.3" }
rustscale-ktimeout = { path = "../ktimeout", version = "0.1.3" }
rustscale-limiter.workspace = true
url = "2"

[dev-dependencies]
tokio.workspace = true
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.3" }
