[package]
name = "rustscale-disco"
description = "Tailscale disco NAT-traversal message codec for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-key = { path = "../key", version = "0.1.4" }
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
