[package]
name = "rustscale-dns"
description = "MagicDNS resolver + in-process DNS responder for rustscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.1" }
rustscale-neterror = { path = "../neterror", version = "0.1.1" }
rustscale-tsaddr = { path = "../tsaddr", version = "0.1.1" }
rustscale-bakedroots = { path = "../bakedroots", version = "0.1.1" }
rustscale-tsdial = { path = "../tsdial", version = "0.1.1" }
rustscale-envknob = { path = "../envknob", version = "0.1.1" }
rustscale-dnsname = { path = "../dnsname", version = "0.1.1" }
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tokio.workspace = true
rustscale-key = { path = "../key", version = "0.1.1" }
tempfile = "3"
