[package]
name = "rustscale-dnscache"
description = "Minimal DNS caching resolver with single-flight dedup and happy-eyeballs dialer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing = "0.1"
rustscale-netns.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
