[package]
name = "rustscale-dnsfallback"
description = "DNS fallback resolver using DERP bootstrap DNS servers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.1" }
rustscale-dnscache = { path = "../dnscache", version = "0.1.1" }
rustscale-tsdial = { path = "../tsdial", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
