[package]
name = "rustscale-drive"
description = "Capability-confined Taildrive share model and WebDAV endpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
