[package]
name = "rustscale-ffi"
description = "C ABI over rustscale tsnet (libtailscale equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# cdylib -> librustscale.dylib / librustscale.so
# staticlib -> librustscale.a
# rlib -> so other rust crates (tests) can call the fns by name
[lib]
name = "rustscale"
crate-type = ["cdylib", "staticlib", "rlib"]

# The workspace forbids unsafe_code and Cargo does not allow overriding a
# workspace `forbid` to a more lenient level, so we cannot inherit workspace
# lints. Instead we replicate the workspace lint policy but with
# unsafe_code = "allow" (required for an FFI crate using raw pointers).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
enum_glob_use = "allow"
doc_markdown = "allow"

[dependencies]
rustscale-tsnet = { path = "../tsnet", version = "0.1.3" }
rustscale-netstack = { path = "../netstack", version = "0.1.3" }
rustscale-health = { path = "../health", version = "0.1.3" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
cbindgen = "0.27"
