[package]
name = "rustscale-filter"
description = "Stateful packet filter for rustscale — port of Tailscale's wgengine/filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-deephash = { path = "../deephash", version = "0.1.3" }
rustscale-flowtrack = { path = "../flowtrack", version = "0.1.3" }
rustscale-ipset = { path = "../ipset", version = "0.1.3" }
rustscale-packet = { path = "../packet", version = "0.1.3" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.3" }
thiserror.workspace = true

[dev-dependencies]
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.3" }
