[package]
name = "rustscale-flowtrack"
description = "IP flow tuple and LRU tracking — port of Tailscale net/flowtrack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
