[package]
name = "rustscale-freedesktop"
description = "Bounded Linux freedesktop session, URL, and notification integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustix = { version = "1", features = ["fs", "process"] }
thiserror.workspace = true
url = "2"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
