[package]
name = "rustscale-identityfederation"
description = "Workload identity federation auth-key resolution for rustscale"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-feature = { path = "../feature", version = "0.1.1" }
async-trait.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
