[package]
name = "rustscale-interop-testcontrol"
description = "Cross-client testcontrol interoperability harness for rustscale"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rustscale-tsnet = { path = "../tsnet", version = "0.1.5" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.5" }
rustscale-key = { path = "../key", version = "0.1.5" }
rustscale-magicsock = { path = "../magicsock", version = "0.1.5" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
