[package]
name = "rustscale-ipn"
description = "IPN state machine and notification bus for rustscale — Go ipn package equivalent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
