[package]
name = "rustscale-ipn"
description = "IPN state machine and notification bus for rustscale — Go ipn package equivalent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustscale-feature = { path = "../feature", version = "0.1.2" }
rustscale-health = { path = "../health", version = "0.1.2" }
rustscale-netcheck = { path = "../netcheck", version = "0.1.2" }
rustscale-tailcfg = { path = "../tailcfg", version = "0.1.2" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"
